Fixed not showing text

--- a/earth.css
+++ b/earth.css
@@ -182,6 +182,37 @@ header{
     font-size: clamp(10px,1.3vw,100px);
 }
 
+.atmosphere-text{
+    display: flex;
+    flex-direction: column;
+    width: 55vw;
+}
+
+.atmosphere-text>span:nth-child(2):hover{
+    transition: 0.5s;
+    color: var(--color-2);
+}
+
+.atmosphere-text>span:nth-child(1){
+    font-family: var(--font-1);
+    color: var(--color-2);
+    font-size: clamp(15px,3vw,100px);
+    letter-spacing: clamp(3px,4vw,80px);
+    font-weight: 900;
+    /* margin: auto; */
+}
+
+.atmosphere-text>span:nth-child(2)>span{
+    color: var(--color-1);
+}
+
+.atmosphere-text>span:nth-child(2){
+    color: var(--color-1);
+    padding-top: 30px;
+    font-family: var(--font-1);
+    font-size: clamp(10px,1.3vw,100px);
+}
+
 
 .atmosphere-image>img:nth-child(1){
     position: absolute;
@@ -235,6 +266,7 @@ header{
     font-size: clamp(10px,1.2vw,40px);
     
 }
+
 /* G    E   O   L   O   G   Y */
 
 .geology{
